feat: Make layout style changes

--- a/css/media.css
+++ b/css/media.css
@@ -17,6 +17,7 @@
         margin-left: -20px;
         border: none;
         padding: 0px;
+        margin-bottom: 10px;
     }
 
     .post-box {
@@ -43,6 +44,7 @@
         margin-left: -20px;
         border: none;
         padding: 0px;
+        margin-bottom: 10px;
     }
 
     .post-items {
