--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,14 @@
 body {
-    background-color: #444;
+    background-color: white;
+}
+
+h1, h2, h3 {
+    text-shadow: 2px 2px lightgrey;
 }
 
 .container {
     display: grid;
-    height: 90vh;
+    height: 100vh;
     grid-template-columns: 700px;
     grid-template-rows: 100px 120px auto 50px;
     grid-template-areas:
@@ -15,18 +19,30 @@ body {
 }
 
 .box {
-    border: 1px solid red;
-    background: #F8FA9D;
+    border: 1px solid grey;
+    background: white;
     padding: 10px;
 }
 
 .header {
     grid-area: hd;
     text-align: center;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background-color: black;
+}
+
+.title {
+    font-size: 40px;
+    text-decoration: underline;
+    color: white;
 }
 
 .footer {
     grid-area: ft;
+    background-color: black;
+    color: white;
 }
 
 .sidebar {
@@ -49,4 +65,8 @@ body {
     border: 1px solid black;
     padding: 5px;
     margin-right: 20px;
+}
+
+.link {
+    text-decoration: none;
 }
