--- a/css/post-lists.css
+++ b/css/post-lists.css
@@ -23,6 +23,8 @@
     padding-left: 20px;
     padding-bottom: 20px;
     margin-bottom: 50px;
+    border-radius: 5%;
+    box-shadow: 2px 2px 2px 2px lightgrey;
 }
 
 .post-title {
