--- a/css/media.css
+++ b/css/media.css
@@ -24,6 +24,11 @@
         margin: auto;
         margin-bottom: 50px;
     }
+
+    .post-container {
+        margin: auto;
+        width: 700px;
+    }
 }
 
 @media (min-width: 1101px) {
@@ -58,5 +63,10 @@
     .post-box {
         margin: auto;
         margin-bottom: 50px;
+    }
+
+    .post-container {
+        margin: auto;
+        width: 1100px;
     }
 }
