--- a/css/layout.css
+++ b/css/layout.css
@@ -24,6 +24,15 @@ h1, h2, h3 {
     padding: 10px;
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 .header {
     grid-area: hd;
     text-align: center;
@@ -69,4 +78,5 @@ h1, h2, h3 {
 
 .link {
     text-decoration: none;
+    color: green;
 }
