--- a/css/post.css
+++ b/css/post.css
@@ -41,4 +41,18 @@ section p {
 .button span{
     display: block;
     text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+.social {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.separator {
+    margin-left: 10px;
+    margin-right: 10px;
 }
