--- a/css/post.css
+++ b/css/post.css
@@ -22,6 +22,12 @@ section h2 {
     height: 200px;
 }
 
+.center-fig {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .data {
     color: gray;
     margin-top: 30px;
